--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -56,11 +56,11 @@ spec:
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /
+              path: {{ .Values.probe.path}}
               port: http
           readinessProbe:
             httpGet:
-              path: /
+              path: {{ .Values.probe.path}}
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
