--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -64,6 +64,9 @@ spec:
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+      {{- if .Values.initContainers}}
+      initContainers:
+      {{- end }}  
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
