add commands in deployment

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -46,6 +46,15 @@ spec:
               mountPath: /etc/krakend/
             {{- toYaml .Values.addlVolumeMounts | nindent 12 }}
             {{- end }}
+          {{- if .Values.commands.enabled }}
+          command: {{.Values.commands.command}}
+          args: {{ .Values.commands.args}}
+          {{- end }}  
+          {{- else if condition2 -}}
+            
+          {{- else -}}
+            
+          {{- end -}}}}
           env:
             {{- if .Values.env }}
             {{- toYaml .Values.env | nindent 12 }}
