change backend conf ingress

--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -35,8 +35,9 @@ spec:
           - path: {{ . }}
             pathType: Prefix
             backend:
-              serviceName: {{ $fullName }}
-              servicePort: {{ $svcPort }}
+              service:
+                name: {{ $fullName }}
+                port: {{ $svcPort }}
           {{- end }}
     {{- end }}
   {{- end }}
