--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -38,7 +38,7 @@ spec:
             - name: config
               mountPath: /etc/krakend/
             {{- toYaml .Values.addlVolumeMounts | nindent 12 }}
-          {{- end -}}}}
+          {{- end }}
           {{- if .Values.commands.enabled }}
           command: {{.Values.commands.command}}
           args: {{ .Values.commands.args}}
