--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -31,49 +31,49 @@ spec:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
-          {{- if .Values.addlVolumeMounts }}
-          volumeMounts:
-            - name: config
-              mountPath: /etc/krakend/
-            {{- toYaml .Values.addlVolumeMounts | nindent 12 }}
-            {{- if .Values.plugin.enabled}}
-            - name: plugin-volume
-              mountPath: /etc/krakend/plugin/
+          - image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+            imagePullPolicy: {{ .Values.image.pullPolicy }}
+            {{- if .Values.addlVolumeMounts }}
+            volumeMounts:
+              - name: config
+                mountPath: /etc/krakend/
+              {{- toYaml .Values.addlVolumeMounts | nindent 12 }}
+              {{- if .Values.plugin.enabled}}
+              - name: plugin-volume
+                mountPath: /etc/krakend/plugin/
+              {{- end }}
             {{- end }}
-          {{- end }}
-          {{- if .Values.commands.enabled }}
-          command: {{.Values.commands.command}}
-          args: {{ .Values.commands.args}}
-          {{- end }}
-          env:
-            {{- if .Values.env }}
-            {{- toYaml .Values.env | nindent 12 }}
+            {{- if .Values.commands.enabled }}
+            command: {{.Values.commands.command}}
+            args: {{ .Values.commands.args}}
             {{- end }}
-          ports:
-            - name: http
-              containerPort: 8080
-              protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: {{ .Values.probe.path}}
-              port: http
-          readinessProbe:
-            httpGet:
-              path: {{ .Values.probe.path}}
-              port: http
-          resources:
-            {{- toYaml .Values.resources | nindent 12 }}
-      {{- if .Values.plugin.enabled}}
-         - image: alpine
-           imagePullPolicy: IfNotPresent
-           name: myvolumes-container-1
-           volumeMounts:
-            - mountPath: /download
-              name: plugin-volume
-           command: ['sh','-c','{{ .Values.plugin.command }}']
-      {{- end}}
+            env:
+              {{- if .Values.env }}
+              {{- toYaml .Values.env | nindent 12 }}
+              {{- end }}
+            ports:
+              - name: http
+                containerPort: 8080
+                protocol: TCP
+            livenessProbe:
+              httpGet:
+                path: {{ .Values.probe.path}}
+                port: http
+            readinessProbe:
+              httpGet:
+                path: {{ .Values.probe.path}}
+                port: http
+            resources:
+              {{- toYaml .Values.resources | nindent 12 }}
+          {{- if .Values.plugin.enabled}}
+          - image: alpine
+            imagePullPolicy: IfNotPresent
+            name: myvolumes-container-1
+            volumeMounts:
+              - mountPath: /download
+                name: plugin-volume
+            command: ['sh','-c','{{ .Values.plugin.command }}']
+          {{- end}}
       volumes:
         - name: config
           configMap:
