--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -76,8 +76,9 @@ spec:
         - name: volume-plugin
           emptyDir: {}
         {{- end }}
-      {{- if .Values.initContainers}}
+      {{- with .Values.initContainers }}
       initContainers:
+        {{- toYaml . | nindent 8 }}
       {{- end }}  
       {{- with .Values.nodeSelector }}
       nodeSelector:
